--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <script src="./models/cloud.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/status-bar.class.js"></script>
+    <script src="./models/status-bar.coins.js"></script>
+    <script src="./models/status-bar.bottle.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/keyboard.class.js"></script>
