add status bars

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./models/status-bar.class.js"></script>
     <script src="./models/status-bar.coins.js"></script>
     <script src="./models/status-bar.bottle.js"></script>
+    <script src="./models/status-bar.boss.js"></script>
     <script src="./models/world.class.js"></script>
     <script src="./models/background-object.class.js"></script>
     <script src="./models/keyboard.class.js"></script>
