--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="./models/drawable-object.class.js"></script>
     <script src="./models/moveable-objects.class.js"></script>
     <script src="./models/chicken.class.js"></script>
+    <script src="./models/coins.class.js"></script>
+    <script src="./models/bottle.class.js"></script>
     <script src="./models/cloud.class.js"></script>
     <script src="./models/character.class.js"></script>
     <script src="./models/status-bar.class.js"></script>
