add game music mute, fullscreen, idle animation for character, letter legend

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
+
     <script src="./models/drawable-object.class.js"></script>
     <script src="./models/moveable-objects.class.js"></script>
     <script src="./models/chicken.class.js"></script>
@@ -24,11 +25,36 @@
     <script src="./models/endboss.class.js"></script>
     <script src="./levels/level1.js"></script>
     <script src="./js/game.js"></script>
-    
-</head>
-<body onload="init()">
+    <script src="./script.js"></script>
+  </head>
+  <body onload="init()">
     <h1>El pollo loco</h1>
 
-    <canvas id="canvas" width="720" height="480"></canvas>
-</body>
+    <section>
+      <div class="game-symbols">
+        <img id="sound-icon" src="img_pollo_locco/speaker_on.svg" alt="Sound Icon" onclick="toggleMusic()"/>
+        <img src="img_pollo_locco/fullscreen.svg" alt="Fullscreen" onclick="showFullscreen()"/>
+      </div>
+
+      <canvas id="canvas" width="720" height="480"></canvas>
+      <div class="legend-container">
+        <div class="move-left">
+          <span class="description"> Move left </span>
+          <span class="letter"> A </span>
+        </div>
+        <div class="move-right">
+          <span class="description"> Move right </span>
+          <span class="letter"> D </span>
+        </div>
+        <div class="jump">
+          <span class="description"> Jump </span>
+          <span class="letter"> W </span>
+        </div>
+        <div class="throw">
+          <span class="description"> Throw </span>
+          <span class="letter"> Space </span>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
