reworked the restart function

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <canvas id="canvas" width="720" height="480"></canvas>
             <div id="gameOverScreenContainer" class="game-over-container">
                 <div class="restart-home-container">
-                    <div onclick="restartGame()" class="restart-button">RESTART</div>
+                    <div onclick="startGame()" class="restart-button">RESTART</div>
                     <div id="home" class="restart-button">HOME</div>
                 </div>
             </div>
