add favicon and reworked collision for enemy

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>EL-POLLO-LOCO</title>
     <link rel="icon" type="image/x-icon" href="img_pollo_locco/img/2_character_pepe/2_walk/W-21.png">
     <link rel="stylesheet" href="style.css">
     <script src="./models/drawable-object.class.js"></script>
