reworked checkCollision function

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <div class="restart-home-container">
                     <button onclick="startGame()" class="restart-button">RESTART</button>
                     <button onclick="homeScreen()" id="home" class="restart-button">HOME</button>
-                </div>>
+                </div>
             </div>
         </div>
         <div class="legend-container">
