remove the resetWorld function

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <script src="./script.js"></script>
 </head>
 <body>
-    <h1>El pollo loco</h1>
+    <h1>El Pollo Loco</h1>
 
     <section>
         <div id="fullscreen" class="container">
