add onload function for showStartScreen

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <script src="./js/game.js"></script>
     <script src="./script.js"></script>
 </head>
-<body>
+
+<body onload="showStartScreen()">
     <h1>El Pollo Loco</h1>
 
     <section>
