add mobile buttons

--- a/index.html
+++ b/index.html
@@ -99,14 +99,14 @@
       </div>
       <div class="mobile-controls">
         <div class="mobile-controls-left">
-            <div id="throw-btn-left" class="control-btn">Throw</div>
-            <div id="jump-btn-left" class="control-btn">Jump</div>
-            <div id="left-btn" class="control-btn">Left</div>
+            <button id="throw-btn-left" class="control-btn">Throw</button>
+            <button id="jump-btn-left" class="control-btn">Jump</button>
+            <button id="left-btn" class="control-btn">Left</button>
         </div>
         <div class="mobile-controls-right">
-            <div id="throw-btn-right" class="control-btn">Throw</div>
-            <div id="jump-btn-right" class="control-btn">Jump</div>
-            <div id="right-btn" class="control-btn">Right</div>
+            <button id="throw-btn-right" class="control-btn">Throw</button>
+            <button id="jump-btn-right" class="control-btn">Jump</button>
+            <button id="right-btn" class="control-btn">Right</button>
         </div>
       </div>
       <div class="legend-container">
