add overlay to rotete the mobile when the screen is too small

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <canvas id="canvas" width="720" height="480"></canvas>
             </div>
             <div class="game-symbols">
-              <img id="controlls-icon" src="img_pollo_locco/game-controller.png" onclick="toggleControlls()" />
+              <img class="controlls-icon" id="controlls-icon" src="img_pollo_locco/game-controller.png" onclick="toggleControlls()" />
               <img id="sound-icon" src="img_pollo_locco/speaker_on.svg" alt="Sound Icon" onclick="toggleMusic()" />
               <img class="fullscreen-icon" src="img_pollo_locco/fullscreen.svg" alt="Fullscreen" onclick="showFullscreen()" />
             </div>
@@ -146,6 +146,10 @@
             <img id="jump-btn-right" src="img_pollo_locco/arrow-left.png" class="control-btn rotate-90"></img>
             
         </div>
+      </div>
+
+      <div class="overlay-rotate" >
+        <div style="color: white; font-size: 24px;">Bitte drehen Sie Ihr Mobilgerät</div>
       </div>
     </section>
   </body>
