add rotate mobile overlay

--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
       </div>
 
       <div class="overlay-rotate" >
-        <div style="color: white; font-size: 24px;">Bitte drehen Sie Ihr Mobilgerät</div>
+        <img src="img_pollo_locco/rotate_mobile.png" alt="Rotate mobile">
+        <div style="color: black; font-size: 24px;">Bitte drehen Sie Ihr Mobilgerät</div>
       </div>
     </section>
   </body>
