--- a/index.html
+++ b/index.html
@@ -3,17 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>EL-POLLO-LOCO</title>
-    <link
-      rel="icon"
-      type="image/x-icon"
-      href="img_pollo_locco/img/2_character_pepe/2_walk/W-21.png"
-    />
+    <link rel="icon" type="image/x-icon" href="img_pollo_locco/img/2_character_pepe/2_walk/W-21.png" />
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="media.css" />
     <script src="./models/drawable-object.class.js"></script>
     <script src="./models/moveable-objects.class.js"></script>
     <script src="./models/chicken.class.js"></script>
@@ -37,7 +31,7 @@
   </head>
 
   <body onload="showStartScreen()">
-    <h1>El Pollo Loco</h1>
+    <h1>EL POLLO LOCO</h1>
 
     <section>
         <div id="fullscreen" class="container">
@@ -96,7 +90,6 @@
                     </div>
                   </div>
                 </div>
-                
               </div>
             </div>
         
