reworked the responsive

--- a/index.html
+++ b/index.html
@@ -142,8 +142,8 @@
       </div>
 
       <div class="overlay-rotate" >
+        <div style="color: black; font-size: 24px;">Turn your device to play</div>
         <img src="img_pollo_locco/rotate_mobile.png" alt="Rotate mobile">
-        <div style="color: black; font-size: 24px;">Bitte drehen Sie Ihr Mobilgerät</div>
       </div>
     </section>
   </body>
