--- a/index.html
+++ b/index.html
@@ -44,10 +44,28 @@
                 <canvas id="canvas" width="720" height="480"></canvas>
             </div>
             <div class="game-symbols">
-              <img class="controlls-icon" id="controlls-icon" src="img_pollo_locco/game-controller.png" onclick="toggleControlls()" />
-              <img id="sound-icon" src="img_pollo_locco/speaker_on.svg" alt="Sound Icon" onclick="toggleMusic()" />
-              <img class="fullscreen-icon" src="img_pollo_locco/fullscreen.svg" alt="Fullscreen" onclick="showFullscreen()" />
+              <img id="description-btn" src="img_pollo_locco/description.png" class="description-button" onclick="toggleDescription()">
+              <img id="controlls-icon" src="img_pollo_locco/game-controller.png" class="controlls-icon" onclick="toggleControlls()" />
+              <img id="sound-icon" src="img_pollo_locco/speaker_on.svg" onclick="toggleMusic()" />
+              <img src="img_pollo_locco/fullscreen.svg" class="fullscreen-icon" alt="Fullscreen" onclick="showFullscreen()" />
             </div>
+
+            <div id="description-window" class="description-window" style="display: none;">
+              <div class="description-content">
+                <h2>Spielbeschreibung</h2>
+                <p>
+                  Willkommen bei "El Pollo Loco"! Tauche ein in ein aufregendes Jump-and-Run-Abenteuer, das dich durch faszinierende Landschaften und gefährliche Gegner führt. Schlüpfe in die Rolle unseres mutigen Helden und navigiere ihn durch eine Welt voller Herausforderungen.
+                </p>
+                <p>
+                  Sammle glänzende Münzen und prickelnde Flaschen, um deine Punktzahl zu erhöhen und dich gegen die fiesen Hühner und Küken zu verteidigen, die deinen Weg kreuzen. Aber sei gewarnt - der ultimative Test wartet am Ende des Levels in Form eines epischen Endbosses!
+                </p>
+                <p>
+                  Bist du bereit, dein Geschick unter Beweis zu stellen und die Gefahren zu überwinden? Dann mach dich bereit für "El Pollo Loco" und erlebe ein Abenteuer voller Spannung und Spaß!
+                </p>
+                <button class="close-btn" onclick="toggleDescription()">Schließen</button>
+              </div>
+            </div>
+
             <div class="overlay"></div>
             <div id="legend-container" class="legend-container" style="display: none;">
               <div id="controll-container" class="controll-container">
