--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
     <script src="./models/endboss.class.js"></script>
     <script src="./levels/level1.js"></script>
     <script src="./js/game.js"></script>
+    <script src="sounds.js"></script>
     <script src="./script.js"></script>
   </head>
 
